jenkins2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  jenkins
  # namespace: default
spec:
  selector:
    app: jenkins
  type:  ClusterIP
  ports:
  - name:  jenkins-listen-port
    port:  8080
    targetPort:  8080
